fix hidden scrollbar

--- a/src/main/webapp/router/shared/css/styles.css
+++ b/src/main/webapp/router/shared/css/styles.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-    background-color: #000000;
-}
 
 .slider {
 	width: 800px;
